[project]
name = "ghost-sync-google-sheets"
version = "0.1.0"
description = "Tools for syncing Ghost CMS data with Google Sheets"
authors = [
    {name = "Eli Dickinson", email = "eli@example.com"}
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "members_to_sqlite.py",
    "test_members_to_sqlite.py",
    "test_ghost_api.py",
    "schema.sql"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
